11-16 update at office

--- a/templates/device/index/index/index.html
+++ b/templates/device/index/index/index.html
@@ -7,6 +7,7 @@
 <meta name="Description" content="控制器" >
 <link href=" /static/css/style2/style.css" rel="stylesheet" type="text/css">
 <script src=" /static/js/jquery.min.js" type="text/javascript"></script>
+<!-- <script src="/static/js/jquery.cookie.js"></script> -->
 <script src="https://cdn.bootcdn.net/ajax/libs/jquery-cookie/1.0/jquery.cookie.min.js"></script>
 <!-- <script>
 // settings.setDisplayZoomControls(ture);
