--- a/templates/device/index/index/login.html
+++ b/templates/device/index/index/login.html
@@ -7,7 +7,8 @@
 <meta name="Description" content="登录" >
 <link href="/static/css/style2/style.css" tppabs="/static/css/style2/style.css" rel="stylesheet" type="text/css">
 <script src="/static/js/jquery.min.js" tppabs="/static/js/jquery.min.js" type="text/javascript"></script>
-<script src="https://cdn.bootcdn.net/ajax/libs/jquery-cookie/1.0/jquery.cookie.min.js"></script>
+<script src="/static/js/jquery.cookie.js"></script>
+
 </head>
 
 <body style=" background:url(/static/images/loginbg.jpg) no-repeat #116DF4;background-size: cover;">
