--- a/templates/device/index/index/logout.html
+++ b/templates/device/index/index/logout.html
@@ -21,7 +21,7 @@
             <p class="success">成功退出登录</p>
                     <p class="detail"></p>
         <p class="jump">
-            页面自动 <a id="href" href="/index/index/index.html">跳转</a> 等待时间： <b id="wait">3</b>
+            页面自动 <a id="href" href="/index/index/login.html">跳转</a> 等待时间： <b id="wait">3</b>
         </p>
     </div>
     <script type="text/javascript">
