--- a/templates/device/index/remind/index.html
+++ b/templates/device/index/remind/index.html
@@ -5,8 +5,8 @@
 <title>售后管理</title>
 <meta name="Keywords" content="售后管理" >
 <meta name="Description" content="售后管理" >
-<link href="/public/static/css/style2/style.css" rel="stylesheet" type="text/css">
-<script src="/public/static/js/jquery.min.js" type="text/javascript"></script>
+<link href="/static/css/style2/style.css" rel="stylesheet" type="text/css">
+<script src="/static/js/jquery.min.js" type="text/javascript"></script>
 
 </head>
 
@@ -14,10 +14,10 @@
 
     <div class="warp">
 		
-        <div class="ej_bt">售后管理<a href="javascript:history.back(-1)" class="fh"><img src="/public/static/images/fanhui.png" /></a></div>
+        <div class="ej_bt">售后管理<a href="javascript:history.back(-1)" class="fh"><img src="/static/images/fanhui.png" /></a></div>
          
         <div class="er_main">
-           <a href="/index/remind/add.html" class="bx"><img src="/public/static/images/shszbg.png" /></a>
+           <a href="/index/remind/add.html" class="bx"><img src="/static/images/shszbg.png" /></a>
         	<div class=" clear"></div>
            <div class="shgl">
 		     
