--- a/templates/device/index/repairs/index.html
+++ b/templates/device/index/repairs/index.html
@@ -5,8 +5,8 @@
 <title>报修管理</title>
 <meta name="Keywords" content="报修管理" >
 <meta name="Description" content="报修管理" >
-<link href="/public/static/css/style2/style.css" rel="stylesheet" type="text/css">
-<script src="/public/static/js/jquery.min.js" type="text/javascript"></script>
+<link href="/static/css/style2/style.css" rel="stylesheet" type="text/css">
+<script src="/static/js/jquery.min.js" type="text/javascript"></script>
 
 </head>
 
@@ -14,13 +14,13 @@
 
     <div class="warp">
 		
-        <div class="ej_bt">报修管理<a href="javascript:history.back(-1)" class="fh"><img src="/public/static/images/fanhui.png" /></a></div>
+        <div class="ej_bt">报修管理<a href="javascript:history.back(-1)" class="fh"><img src="/static/images/fanhui.png" /></a></div>
          
 	<!---判断厂商---->
 	     <!---运营商---->
 		  
 		  <div class="er_main">
-           <a href="/index/repairs/add.html" class="bx"><img src="/public/static/images/bx.png" /></a>
+           <a href="/index/repairs/add.html" class="bx"><img src="/static/images/bx.png" /></a>
         	<div class=" clear"></div>
              
 			   <div class="shgl">
