--- a/templates/device/test.html
+++ b/templates/device/test.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <a href="http://IP/q/1010000000125418" target="_blank" data-id="1010000000125418" onclick="return false;">jQuery112</a>
-    
+    <span no="" type="0">取消</span>
     <input name="NetState" type="radio" value="1"  class="zx" style="width:30px;height:30px"/>
 
     <script>
