--- a/templates/device/index/Equipment/index.html
+++ b/templates/device/index/Equipment/index.html
@@ -7,7 +7,7 @@
 <meta name="Description" content="设备管理" >
 <link href="/static/css/style2/style.css" rel="stylesheet" type="text/css">
 <script src="/static/js/jquery.min.js" type="text/javascript"></script>
-<script src="https://cdn.bootcdn.net/ajax/libs/jquery-cookie/1.0/jquery.cookie.min.js"></script>
+<script src="/static/js/jquery.cookie.js"></script>
 <script src="/static/js/login.js" type="text/javascript"></script>
 
 </head>
@@ -163,7 +163,6 @@
             </div> -->
 		</div>
         
- 
         <div id="pagination1" class="page fl">
             <div class="ui-pagination-container">
                 <a id="pre" href="#" class="ui-pagination-page-item" onclick="return false;" data-current="2">上一页</a>
@@ -239,8 +238,6 @@
                             </ul>
                         </div>
                         `
-
-
         String.format = function(src){  
             if (arguments.length == 0) return null;  
             var args = Array.prototype.slice.call(arguments, 1);  
