--- a/templates/device/index/fault/index.html
+++ b/templates/device/index/fault/index.html
@@ -5,8 +5,8 @@
 <title>故障管理</title>
 <meta name="Keywords" content="故障管理" >
 <meta name="Description" content="故障管理" >
-<link href="/public/static/css/style2/style.css" rel="stylesheet" type="text/css">
-<script src="/public/static/js/jquery.min.js" type="text/javascript"></script>
+<link href="/static/css/style2/style.css" rel="stylesheet" type="text/css">
+<script src="/static/js/jquery.min.js" type="text/javascript"></script>
 
 </head>
 
@@ -15,11 +15,11 @@
 
     <div class="warp">
 		
-        <div class="ej_bt">设备故障列表<a href="javascript:history.back(-1)" class="fh"><img src="/public/static/images/fanhui.png" /></a></div>
+        <div class="ej_bt">设备故障列表<a href="javascript:history.back(-1)" class="fh"><img src="/static/images/fanhui.png" /></a></div>
         <!--
          <div class="ej_cx">
              <div class="cx_l"></div>
-             <div class="cx_r"><a href="">查询<img src="/public/static/images/x.png" /></a></div>
+             <div class="cx_r"><a href="">查询<img src="/static/images/x.png" /></a></div>
              <div class=" clear"></div>
          </div>
         -->
