--- a/templates/device/index/user/changePwd.html
+++ b/templates/device/index/user/changePwd.html
@@ -14,8 +14,8 @@
         <meta name="format-detection" content="telephone=no">
         <meta name="format-detection" content="address=no">
         <meta name="viewport" content="initial-scale=1, width=device-width, maximum-scale=1, user-scalable=no">
-        <link rel="stylesheet" type="text/css" href="/public/static/css/style.css"/>
-        <script src="/public/static/js/jquery.js" type="text/javascript" charset="utf-8"></script>
+        <link rel="stylesheet" type="text/css" href="/static/css/style.css"/>
+        <script src="/static/js/jquery.js" type="text/javascript" charset="utf-8"></script>
     </head>
 <body>
     <!--主体-->
@@ -23,7 +23,7 @@
 	<body style="background:#f6f6f6;">
 		<div class="content">
 			<header class="page-header1">
-				<a href="javascript:history.back(-1)"><img src="/public/static/img/icon_left.png" class="back_img" style="float:left;"/></a>
+				<a href="javascript:history.back(-1)"><img src="/static/img/icon_left.png" class="back_img" style="float:left;"/></a>
 				<h3>修改密码</h3>
 			</header>
 			<form id="h-form">
@@ -31,7 +31,7 @@
 				<div class="cipher_code_list">
 					<div class="cipher_code_lists">
 						<div class="cipher_code_lists_left">
-							<img src="/public/static/img/icon_passwords.png" style="width:60%;"/>
+							<img src="/static/img/icon_passwords.png" style="width:60%;"/>
 						</div>
 						<div class="cipher_code_lists_right">
 							<input type="password" name="password_old" value="" class="original_cipher_inp" placeholder="原始密码"/>
@@ -40,7 +40,7 @@
 					
 					<div class="cipher_code_lists">
 						<div class="cipher_code_lists_left">
-							<img src="/public/static/img/icon_passwords.png" style="width:60%;"/>
+							<img src="/static/img/icon_passwords.png" style="width:60%;"/>
 						</div>
 						<div class="cipher_code_lists_right">
 							<input type="password" name="password_new" value="" class="new_code_inp" placeholder="新密码"/>
@@ -49,7 +49,7 @@
 					
 					<div class="cipher_code_lists">
 						<div class="cipher_code_lists_left">
-							<img src="/public/static/img/icon_passwords.png" style="width:60%;"/>
+							<img src="/static/img/icon_passwords.png" style="width:60%;"/>
 						</div>
 						<div class="cipher_code_lists_right">
 							<input type="password" name="re_password_new" value="" class="confirm_pass_inp" placeholder="确认密码"/>
@@ -68,9 +68,9 @@ var SCOPE = {
   'post_url' : ""
 }
 </script>
-<script src="/public/static/js/layer/mobile/layer.js" type="text/javascript" charset="utf-8"></script>
-<script src="/public/static/js/mdialog.js" type="text/javascript" charset="utf-8"></script>
-<script src="/public/static/js/mcommon.js" type="text/javascript" charset="utf-8"></script>
+<script src="/static/js/layer/mobile/layer.js" type="text/javascript" charset="utf-8"></script>
+<script src="/static/js/mdialog.js" type="text/javascript" charset="utf-8"></script>
+<script src="/static/js/mcommon.js" type="text/javascript" charset="utf-8"></script>
 
 </body>
 </html>
