--- a/templates/device/index/repairs/add.html
+++ b/templates/device/index/repairs/add.html
@@ -2,9 +2,7 @@
 <html lang="zh-CN">
 <head>
         <meta charset="utf-8" />
-        
-<title>报修添加-控制器</title>
-
+        <title>报修添加-控制器</title>
         <meta name="keywords"  content="" />
         <meta name="description" content="控制器" />
         <meta name="author" content="DeathGhost" />
@@ -16,6 +14,7 @@
         <meta name="viewport" content="initial-scale=1, width=device-width, maximum-scale=1, user-scalable=no">
         <link rel="stylesheet" type="text/css" href="/static/css/style.css"/>
         <script src="/static/js/jquery.js" type="text/javascript" charset="utf-8"></script>
+        <script src="/static/js/jquery.cookie.js"></script>
     </head>
 <body>
     <!--主体-->
@@ -29,37 +28,37 @@
         <a href="javascript:;" onClick="javascript:history.back(-1);"><img src="/static/img/icon_left.png" class="back_img" style="float:left;"/></a>
         <h3>报修添加</h3>
     </header>
-    <form id="h-form" action="/index/repairs/add.html">
-    <div class="add_account">
+    <form id="h-form" onsubmit="javascript:return add_submit();">
+    <div  class="add_account">
 			<div class="add_account_list">
 		            <div class="add_account_lists">
                 <div class="add_account_lists_left">设备号</div>
                 <div class="add_account_lists_right">
-                    <input type="text" name="device_id" value="" placeholder="请输入设备号" class="add_account_inp add_account_name_inp"/>
+                    <input type="text" name="deviceNum" value="" placeholder="请输入设备号" class="add_account_inp add_account_name_inp"/>
                 </div>
             </div>
 			<div class="add_account_lists">
                 <div class="add_account_lists_left">报修人名称</div>
                 <div class="add_account_lists_right">
-                    <input type="text" name="name" value="" placeholder="请输入报修人名称" class="add_account_inp add_account_name_inp"/>
+                    <input type="text" name="reportMan" value="" placeholder="请输入报修人名称" class="add_account_inp add_account_name_inp"/>
                 </div>
             </div>
 			<div class="add_account_lists">
                 <div class="add_account_lists_left">电话号码</div>
                 <div class="add_account_lists_right">
-                    <input type="text" name="mobile" value="" placeholder="请输入电话" class="add_account_inp add_account_phone_inp"/>
+                    <input type="text" name="Phone" value="" placeholder="请输入电话" class="add_account_inp add_account_phone_inp"/>
                 </div>
             </div>
 			<div class="add_account_lists">
                 <div class="add_account_lists_left">报修内容描述</div>
                 <div class="add_account_lists_right">
-                    <input type="text" name="cont" value="" placeholder="请输入报修内容描述" class="add_account_inp add_account_name_inp"/>
+                    <input type="text" name="descErorr" value="" placeholder="请输入报修内容描述" class="add_account_inp add_account_name_inp"/>
                 </div>
             </div>
 		   <div class="add_account_lists">
                 <div class="add_account_lists_left">报修地址</div>
                 <div class="add_account_lists_right">
-                    <input type="text" name="address" value="" placeholder="请输入报修地址" class="add_account_inp add_account_name_inp"/>
+                    <input type="text" name="repairAddr" value="" placeholder="请输入报修地址" class="add_account_inp add_account_name_inp"/>
                 </div>
             </div>
 			      
@@ -67,20 +66,48 @@
         </div>
         
         <div class="add_account_btn">
-            <button type="button" class="btn_add" id="h-submit">添加</button>
+            <input type="submit" class="btn_add" id="h-submit" value="添加" />
+
         </div>
     </div>
     </form>
     <div style="clear: both;"></div>
 </div>
-<script>
-var SCOPE = {
-  'post_url' : ""
-}
-</script>
+
 <script src="/static/js/layer/mobile/layer.js" type="text/javascript" charset="utf-8"></script>
 <script src="/static/js/mdialog.js" type="text/javascript" charset="utf-8"></script>
-<script src="/static/js/mcommon.js" type="text/javascript" charset="utf-8"></script>
+<!-- <script src="/static/js/mcommon.js" type="text/javascript" charset="utf-8"></script> -->
+<script>
+    function add_submit(){
+        var deviceNum = $('#h-form input[name="deviceNum"]').val()
+        var reportMan = $('#h-form input[name="reportMan"]').val()
+        var Phone = $('#h-form input[name="Phone"]').val() 
+        var descErorr = $('#h-form input[name="descErorr"]').val()
+        var repairAddr = $('#h-form input[name="repairAddr"]').val()
+        $.ajax({
+            type:'POST',
+            url:"/RepairDeviceViewset/",
+            cache: false,
+            data: {
+                    "deviceNum": deviceNum, 
+                    "reportMan": reportMan, 
+                    "Phone":Phone,
+                    "descErorr": descErorr,
+                    "repairAddr": repairAddr
+                    // "csrfmiddlewaretoken":"4k3TYP9ybseWhZ7APe284jre4sbpYDbdyLNzoETxYAcqEWyvYxnemyv9wn7sV3GR",
+                    },
+            beforeSend: function (XMLHttpRequest) {
+                XMLHttpRequest.setRequestHeader("Authorization","JWT "+$.cookie('token'));
+                XMLHttpRequest.setRequestHeader("X-CSRFToken","4k3TYP9ybseWhZ7APe284jre4sbpYDbdyLNzoETxYAcqEWyvYxnemyv9wn7sV3GR");
+            },
+            success:function(data){
+                window.location.href="/index/repairs/index.html/"
+            }
+        });
 
+        return false;
+    }
+
+</script>
 </body>
 </html>
