--- a/templates/device/index/repairs/index.html
+++ b/templates/device/index/repairs/index.html
@@ -7,6 +7,7 @@
 <meta name="Description" content="报修管理" >
 <link href="/static/css/style2/style.css" rel="stylesheet" type="text/css">
 <script src="/static/js/jquery.min.js" type="text/javascript"></script>
+<script src="/static/js/jquery.cookie.js"></script>
 
 </head>
 
@@ -22,8 +23,8 @@
 		  <div class="er_main">
            <a href="/index/repairs/add.html" class="bx"><img src="/static/images/bx.png" /></a>
         	<div class=" clear"></div>
-             
-			   <div class="shgl">
+				<div id="repairiList"></div>
+			   <!-- <div class="shgl">
 					<div class="sh_1">
 						<span class="bianhao bxgl">报修编号：3000012-24</span>
 						<a href="/index/repairs/addfeedback/id/24.html" class="huifu">回复</a>
@@ -40,117 +41,73 @@
 							<dd>上门维修人员：李工</dd>
 							<dd>维修人员电话：15910880188</dd>
 													</dl>
-							   
 					</div>
-		   
-			   </div>
-               
-			   <div class="shgl">
-					<div class="sh_1">
-						<span class="bianhao bxgl">报修编号：3000012-23</span>
-						<a href="/index/repairs/addfeedback/id/23.html" class="huifu">回复</a>
-						<div class=" clear"></div>
-						<dl>
-							<dt><div>报修状态：报修</div><div>报修人员：贾占海</div><div class=" clear"></div></dt>
-							<dt><div>联系电话：15376916588</div><div>设备号：3000012</div><div class=" clear"></div></dt>
-							<dd>维修地点：山东省临沂市兰山区美佳商业</dd>
-							<dd>故障简述：设备低压开关不正常</dd>
-							<dd>报修日期：2020-06-04 08:49:14</dd>
-							
-													</dl>
-							   
-					</div>
-		   
-			   </div>
-               
-			   <div class="shgl">
-					<div class="sh_1">
-						<span class="bianhao bxgl">报修编号：9090-22</span>
-						<a href="/index/repairs/addfeedback/id/22.html" class="huifu">回复</a>
-						<div class=" clear"></div>
-						<dl>
-							<dt><div>报修状态：派工中</div><div>报修人员：小李</div><div class=" clear"></div></dt>
-							<dt><div>联系电话：18669450225</div><div>设备号：9090</div><div class=" clear"></div></dt>
-							<dd>维修地点：兰山</dd>
-							<dd>故障简述：屏不亮</dd>
-							<dd>报修日期：2020-04-27 15:49:24</dd>
-							
-														---------------------------------------------------------
-							<br>
-							<dd>上门维修人员：张师傅</dd>
-							<dd>维修人员电话：15910898909</dd>
-													</dl>
-							   
-					</div>
-		   
-			   </div>
-               
-			   <div class="shgl">
-					<div class="sh_1">
-						<span class="bianhao bxgl">报修编号：2136-20</span>
-						<a href="/index/repairs/addfeedback/id/20.html" class="huifu">回复</a>
-						<div class=" clear"></div>
-						<dl>
-							<dt><div>报修状态：派工中</div><div>报修人员：老阚</div><div class=" clear"></div></dt>
-							<dt><div>联系电话：15318226577</div><div>设备号：2136</div><div class=" clear"></div></dt>
-							<dd>维修地点：兰山</dd>
-							<dd>故障简述：机器不显示打水时间</dd>
-							<dd>报修日期：2020-04-22 14:32:27</dd>
-							
-														---------------------------------------------------------
-							<br>
-							<dd>上门维修人员：来咯</dd>
-							<dd>维修人员电话：15318226577</dd>
-													</dl>
-							   
-					</div>
-		   
-			   </div>
-               
-			   <div class="shgl">
-					<div class="sh_1">
-						<span class="bianhao bxgl">报修编号：2252-17</span>
-						<a href="/index/repairs/addfeedback/id/17.html" class="huifu">回复</a>
-						<div class=" clear"></div>
-						<dl>
-							<dt><div>报修状态：报修</div><div>报修人员：孙</div><div class=" clear"></div></dt>
-							<dt><div>联系电话：15318226577</div><div>设备号：2252</div><div class=" clear"></div></dt>
-							<dd>维修地点：兰山区</dd>
-							<dd>故障简述：无法开机</dd>
-							<dd>报修日期：2020-04-20 15:55:51</dd>
-							
-													</dl>
-							   
-					</div>
-		   
-			   </div>
-               
-			   <div class="shgl">
-					<div class="sh_1">
-						<span class="bianhao bxgl">报修编号：2136-16</span>
-						<a href="/index/repairs/addfeedback/id/16.html" class="huifu">回复</a>
-						<div class=" clear"></div>
-						<dl>
-							<dt><div>报修状态：派工中</div><div>报修人员：刘</div><div class=" clear"></div></dt>
-							<dt><div>联系电话：15318226577</div><div>设备号：2136</div><div class=" clear"></div></dt>
-							<dd>维修地点：山东省临沂市美佳大厦</dd>
-							<dd>故障简述：设备不出水了</dd>
-							<dd>报修日期：2020-04-20 15:11:52</dd>
-							
-														---------------------------------------------------------
-							<br>
-							<dd>上门维修人员：小李</dd>
-							<dd>维修人员电话：15910898909</dd>
-													</dl>
-							   
-					</div>
-		   
-			   </div>
-                         
+			   </div> -->
+                 
         </div>
 		                
             <div class="footer">山东跃水电子科技有限公司</div>
     </div><!--warp-->
-    
+    <script>
+		String.format = function(src){  
+            if (arguments.length == 0) return null;  
+            var args = Array.prototype.slice.call(arguments, 1);  
+            return src.replace(/\{(\d+)\}/g, function(m, i){  
+                return args[i];  
+            });  
+        };  
+
+		templateStr = `
+		<div class="shgl">
+					<div class="sh_1">
+						<span class="bianhao bxgl">报修编号：{0}</span>
+						<a href="/index/repairs/addfeedback/id/24.html" class="huifu">回复</a>
+						<div class=" clear"></div>
+						<dl>
+							<dt><div>报修状态：{1}</div><div>报修人员：{2}</div><div class=" clear"></div></dt>
+							<dt><div>联系电话：{3}</div><div>设备号：{4}</div><div class=" clear"></div></dt>
+							<dd>维修地点：{5}</dd>
+							<dd>故障简述：{6}</dd>
+							<dd>报修日期：{7}</dd>
+							
+														---------------------------------------------------------
+							<br>
+							<dd>上门维修人员：{8}</dd>
+							<dd>维修人员电话：{9}</dd>
+													</dl>
+					</div>
+			   </div>
+		`
+		$(document).ready(function(){
+					//首页设备列表展示
+					$.ajax({
+							type:'GET',
+							url:"/RepairDeviceViewset/",
+							cache: false,
+							beforeSend: function (XMLHttpRequest) {
+								XMLHttpRequest.setRequestHeader("Authorization","JWT "+$.cookie('token'));
+							},
+							success:function(data){
+								console.log(data)
+								for (idx in data){
+									deviceList = String.format(templateStr,
+										data[idx]["repairID"],
+										data[idx]["repairState"],
+										data[idx]["reportMan"],
+										data[idx]["Phone"],
+										data[idx]["deviceNum"],
+										data[idx]["repairAddr"],
+										data[idx]["descErorr"],
+										data[idx]["runErrorTime"],
+										data[idx]["repairMan"],
+										data[idx]["repairManPhone"],
+									)
+									$("#repairiList").append(deviceList)
+								}
+							}
+					})
+				})
+
+	</script>
 </body>
 </html>
