--- a/templates/device/index/repairs/addfeedback.html
+++ b/templates/device/index/repairs/addfeedback.html
@@ -127,6 +127,8 @@ var SCOPE = {
 <script src="/static/js/layer/mobile/layer.js" type="text/javascript" charset="utf-8"></script>
 <script src="/static/js/mdialog.js" type="text/javascript" charset="utf-8"></script>
 <script src="/static/js/mcommon.js" type="text/javascript" charset="utf-8"></script>
-
+<script>
+    console.log
+</script>
 </body>
 </html>
