--- a/templates/device/test.html
+++ b/templates/device/test.html
@@ -74,7 +74,7 @@
                       "Phone":Phone,
                       "descErorr": descErorr,
                       "repairAddr": repairAddr,
-                      // "csrfmiddlewaretoken":"4k3TYP9ybseWhZ7APe284jre4sbpYDbdyLNzoETxYAcqEWyvYxnemyv9wn7sV3GR",
+                      // "csrfmiddlewaretoken":"",
                       },
               beforeSend: function (XMLHttpRequest) {
                   XMLHttpRequest.setRequestHeader("Authorization","JWT "+$.cookie('token'));
