--- a/templates/device/index/remind/add.html
+++ b/templates/device/index/remind/add.html
@@ -16,12 +16,11 @@
         <meta name="viewport" content="initial-scale=1, width=device-width, maximum-scale=1, user-scalable=no">
         <link rel="stylesheet" type="text/css" href="/static/css/style.css"/>
         <script src="/static/js/jquery.js" type="text/javascript" charset="utf-8"></script>
+        <script src="/static/js/jquery.cookie.js"></script>
     </head>
 <body>
     <!--主体-->
-    
-<script src="/static/js/Mdate.js" type="text/javascript" charset="utf-8"></script>
-<script src="/static/js/iScroll.js" type="text/javascript" charset="utf-8"></script>
+
 <link rel="stylesheet" type="text/css" href="/static/css/Mdate.css"/>
 <style type="text/css">
     .none{display:none;}
@@ -144,16 +143,7 @@
     </form>
     <div style="clear: both;"></div>
 </div>
- <!--时间-->
-    <script type="text/javascript">
-        new Mdate("dateSelectorOne",{beginYear: "2020",format: "-"});
-        new Mdate("dateSelectorTwo",{beginYear: "2022",format: "-"});
-    </script>
-<script>
-var SCOPE = {
-  'post_url' : ""
-}
-</script>
+
 <script src="/static/js/layer/mobile/layer.js" type="text/javascript" charset="utf-8"></script>
 <script src="/static/js/mdialog.js" type="text/javascript" charset="utf-8"></script>
 <!-- <script src="/static/js/mcommon.js" type="text/javascript" charset="utf-8"></script> -->
@@ -173,23 +163,35 @@ var SCOPE = {
         });
         var paramJson = JSON.stringify(paramDict)
         console.log(paramJson)
-        alert(1)
         $.ajax({
             type:'POST',
-            url:"/AfterSaleManageViewset/",
+            url:"/afterSaleManageViewset/",
             cache: false,
             data: paramJson,
             beforeSend: function (XMLHttpRequest) {
                 XMLHttpRequest.setRequestHeader("Authorization","JWT "+$.cookie('token'));
-                XMLHttpRequest.setRequestHeader("X-CSRFToken","4k3TYP9ybseWhZ7APe284jre4sbpYDbdyLNzoETxYAcqEWyvYxnemyv9wn7sV3GR");
+                XMLHttpRequest.setRequestHeader("X-CSRFToken",$.cookie("csrftoken"));
             },
             success:function(data){
                 console.log(data)
+                
             }
         });
         return false;
     }                   
     
 </script>
+<!-- <script src="/static/js/Mdate.js" type="text/javascript" charset="utf-8"></script> -->
+ <!--时间-->
+ <!-- <script type="text/javascript">
+    new Mdate("dateSelectorOne",{beginYear: "2020",format: "-"});
+    new Mdate("dateSelectorTwo",{beginYear: "2022",format: "-"});
+</script> -->
+<script>
+    var SCOPE = {
+    'post_url' : ""
+    }
+</script>
+<script src="/static/js/iScroll.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
