--- a/templates/device/index/repairs/index.html
+++ b/templates/device/index/repairs/index.html
@@ -56,12 +56,13 @@
                 return args[i];  
             });  
         };  
-
+// <a href="/index/repairs/addfeedback/id/24.html" bind="{0}" class="huifu">回复</a>
 		templateStr = `
 		<div class="shgl">
 					<div class="sh_1">
 						<span class="bianhao bxgl">报修编号：{0}</span>
-						<a href="/index/repairs/addfeedback/id/24.html" class="huifu">回复</a>
+						
+						<a href="/index/repairs/addfeedback.html?repairID={0}" class="huifu">回复</a>
 						<div class=" clear"></div>
 						<dl>
 							<dt><div>报修状态：{1}</div><div>报修人员：{2}</div><div class=" clear"></div></dt>
@@ -98,7 +99,7 @@
 										data[idx]["deviceNum"],
 										data[idx]["repairAddr"],
 										data[idx]["descErorr"],
-										data[idx]["runErrorTime"],
+										data[idx]["create_time"],
 										data[idx]["repairMan"],
 										data[idx]["repairManPhone"],
 									)
