--- a/templates/device/index/repairs/index.html
+++ b/templates/device/index/repairs/index.html
@@ -62,7 +62,7 @@
 					<div class="sh_1">
 						<span class="bianhao bxgl">报修编号：{0}</span>
 						
-						<a href="/index/repairs/addfeedback.html?repairID={0}" class="huifu">回复</a>
+						<a href="/index/repairs/addfeedback/{0}/" class="huifu">回复</a>
 						<div class=" clear"></div>
 						<dl>
 							<dt><div>报修状态：{1}</div><div>报修人员：{2}</div><div class=" clear"></div></dt>
