11-21 update at home

--- a/templates/device/index/repairs/addfeedback.html
+++ b/templates/device/index/repairs/addfeedback.html
@@ -36,17 +36,17 @@
 			<div class="add_account_lists">
                 <div class="add_account_lists_left">是否解决</div>
                 <div class="add_account_lists_right">
-					<input class="radio" type="radio" name="is_ever" value="1" title="已解决" checked>已解决
-					<input type="radio" name="is_ever" value="0" title="未解决">未解决
+					<input class="radio" type="radio" name="is_ever" value=1 title="已解决" checked>已解决
+					<input type="radio" name="is_ever" value=0 title="未解决">未解决
                 </div>
             </div>
 			<div class="add_account_lists">
                 <div class="add_account_lists_left">是否满意</div>
                 <div class="add_account_lists_right">
-						<input class="radio" type="radio" name="eval_degree" value="1" title="非常满意" checked>非常满意
-						<input type="radio" name="eval_degree" value="2" title="满意">满意
-						<input type="radio" name="eval_degree" value="3" title="不满意">不满意
-						<input type="radio" name="eval_degree" value="4" title="非常不满意">非常不满意
+						<input class="radio" type="radio" name="eval_degree" value=1 title="非常满意" checked>非常满意
+						<input type="radio" name="eval_degree" value=2 title="满意">满意
+						<input type="radio" name="eval_degree" value=3 title="不满意">不满意
+						<input type="radio" name="eval_degree" value=4 title="非常不满意">非常不满意
                 </div>
             </div>
 			<div class="add_account_lists">
