--- a/templates/device/index/user/changePwd.html
+++ b/templates/device/index/user/changePwd.html
@@ -15,7 +15,9 @@
         <meta name="format-detection" content="address=no">
         <meta name="viewport" content="initial-scale=1, width=device-width, maximum-scale=1, user-scalable=no">
         <link rel="stylesheet" type="text/css" href="/static/css/style.css"/>
-        <script src="/static/js/jquery.js" type="text/javascript" charset="utf-8"></script>
+		<!-- <script src="/static/js/jquery.js" type="text/javascript" charset="utf-8"></script> -->
+		<script src="/static/js/jquery.min.js" type="text/javascript"></script>
+		<script src="/static/js/jquery.cookie.js"></script>
     </head>
 <body>
     <!--主体-->
@@ -70,7 +72,62 @@ var SCOPE = {
 </script>
 <script src="/static/js/layer/mobile/layer.js" type="text/javascript" charset="utf-8"></script>
 <script src="/static/js/mdialog.js" type="text/javascript" charset="utf-8"></script>
-<script src="/static/js/mcommon.js" type="text/javascript" charset="utf-8"></script>
-
+<!-- <script src="/static/js/mcommon.js" type="text/javascript" charset="utf-8"></script> -->
+<script>
+	$(document).ready(function(){
+		$.ajax({
+			type:'GET',
+			url:"/get_user/",
+			cache: false,
+			beforeSend: function (XMLHttpRequest) {
+					XMLHttpRequest.setRequestHeader("Authorization","JWT "+$.cookie('token'));
+				},
+			success:function(data){
+				console.log(data)
+			
+			}
+			
+		}) 
+	})
+	
+	$("#h-submit").click(function(){
+		$("#h-submit").attr("disabled",true);
+		// 提示
+		//dialog.loading();
+		//return false;
+		var data = $("#h-form").serializeArray();
+		console.log(data)
+		postData = {};
+		$(data).each(function(i){
+		postData[this.name] = this.value;
+		console.log(this.name)
+		console.log(this.value)
+		});
+		// 将获取到的数据post给服务器
+		url = SCOPE.post_url;
+		console.log(data)
+		$.ajax({
+			type:'POST',
+			url:url,
+			data:postData,
+			cache: false,
+			beforeSend: function (XMLHttpRequest) {
+					XMLHttpRequest.setRequestHeader("Authorization","JWT "+$.cookie('token'));
+				},
+			success:function(data){
+				console.log(data.msg)
+				if (data.msg == "密码更改成功"){
+					dialog.success(data.msg);
+				}
+				if (data.msg == "重设的两次密码输入不一致"){
+					dialog.error(data.msg);
+				}
+				if (data.msg == "输入的原始密码不正确"){
+					dialog.error(data.msg);
+				}
+			}
+		}) 
+	});
+</script>
 </body>
 </html>
