--- a/templates/device/index/setting/sell/Id/paramSet.html
+++ b/templates/device/index/setting/sell/Id/paramSet.html
@@ -5,10 +5,11 @@
 <title>设备管理</title>
 <meta name="Keywords" content="设备管理" >
 <meta name="Description" content="设备管理" >
-<link href="/public/static/css/style2/style.css" rel="stylesheet" type="text/css">
-<script src="/public/static/js/jquery.min.js" type="text/javascript"></script>
-<script src="/public/static/js/login.js" type="text/javascript"></script>
-<script src="/public/static/js/honeySwitch.js" type="text/javascript"></script>
+<link href="/static/css/style2/style.css" rel="stylesheet" type="text/css">
+<script src="/static/js/jquery.min.js" type="text/javascript"></script>
+<script src="/static/js/jquery.cookie.js"></script>
+<script src="/static/js/login.js" type="text/javascript"></script>
+<script src="/static/js/honeySwitch.js" type="text/javascript"></script>
 
 <style type="text/css">
 .weui-switch {
@@ -74,74 +75,88 @@
 <body>
 
     <div class="warp">
-	 <form id="h-form">
-        <div class="ej_bt">反渗透设备参数设置<a href="javascript:history.back(-1)" class="fh"><img src="/public/static/images/fanhui.png" /></a></div>
+
+		<div style="clear: both;"></div>
+            <div class="footer">山东跃水电子科技有限公司</div>
+    </div><!--warp-->
+<script>
+var SCOPE = {
+  'post_url' : ""
+}
+</script>
+<script src="/static/js/layer/mobile/layer.js" type="text/javascript" charset="utf-8"></script>
+<script src="/static/js/mdialog.js" type="text/javascript" charset="utf-8"></script>
+<script src="/static/js/mcommon.js" type="text/javascript" charset="utf-8"></script>
+<script>
+    tmpStr = `
+    <form id="h-form">
+        <div class="ej_bt">反渗透设备参数设置<a href="javascript:history.back(-1)" class="fh"><img src="/static/images/fanhui.png" /></a></div>
          
         <dl class="sbcs sbcs1">
         	<dt><strong>设备ID</strong></dt>
-            <dd><strong> 3000003</strong></dd>
+            <dd><strong>{0}</strong></dd>
             <div class="clear"></div>
         </dl>
          
         <dl class="sbcs">
         	<dt>开启冲洗阀时间1T(1-240秒)</dt>
-            <dd class="cssz"><input type="number" placeholder="0" name="yukoufeicanshu" value="10" class="water_sales deducting_fee_inp"></dd>
+            <dd class="cssz"><input type="number" placeholder="0" name="yukoufeicanshu" value="{1}" class="water_sales deducting_fee_inp"></dd>
             <div class="clear"></div>
         </dl>
          
         <dl class="sbcs" style="line-height: 42px;">
         	<dt>开启制水泵时间2T(1-240秒) <br />高压洗膜2T参数不用</dt>
-            <dd class="cssz"><input type="number" placeholder="0"  name="liuliangjimaichongshu" value="30"  class="water_sales deducting_fee_inp"></dd>
+            <dd class="cssz"><input type="number" placeholder="0"  name="liuliangjimaichongshu" value="{2}"  class="water_sales deducting_fee_inp"></dd>
             <div class="clear"></div>
         </dl>
         
         <dl class="sbcs">
         	<dt>循环冲洗时间3T(1-240秒)</dt>
-            <dd class="cssz"><input type="number" placeholder="0" name="shuakadashuishijian" value="15" class="water_sales deducting_fee_inp"></dd>
+            <dd class="cssz"><input type="number" placeholder="0" name="shuakadashuishijian" value="{3}" class="water_sales deducting_fee_inp"></dd>
             <div class="clear"></div>
         </dl>
 		
 		 <dl class="sbcs">
         	<dt>水满后冲洗时间4T(1-240秒)</dt>
-            <dd class="cssz"><input type="number" placeholder="0" name="toubidashuishijian" value="15" class="water_sales deducting_fee_inp"></dd>
+            <dd class="cssz"><input type="number" placeholder="0" name="toubidashuishijian" value="{4}" class="water_sales deducting_fee_inp"></dd>
             <div class="clear"></div>
         </dl>
 		
 		 <dl class="sbcs">
         	<dt>冲洗时间间隔5T(1-240分)</dt>
-            <dd class="cssz"><input type="number" placeholder="0" name="maimaichongshuiliang" value="120" class="water_sales deducting_fee_inp"></dd>
+            <dd class="cssz"><input type="number" placeholder="0" name="maimaichongshuiliang" value="{5}" class="water_sales deducting_fee_inp"></dd>
             <div class="clear"></div>
         </dl>
 		
 		 <dl class="sbcs">
         	<dt>水满制水泵停止时间6T(5-240秒)</dt>
-            <dd class="cssz"><input type="number" placeholder="0" name="qianshuhuishoushijian" value="5" class="water_sales deducting_fee_inp"></dd>
+            <dd class="cssz"><input type="number" placeholder="0" name="qianshuhuishoushijian" value="{6}" class="water_sales deducting_fee_inp"></dd>
             <div class="clear"></div>
         </dl>
 		
 		 <dl class="sbcs">
         	<dt>臭氧杀菌时间7T(5-240秒)</dt>
-            <dd class="cssz"><input type="number" placeholder="0" name="chouyangshajunshijian" value="10" class="water_sales deducting_fee_inp"></dd>
+            <dd class="cssz"><input type="number" placeholder="0" name="chouyangshajunshijian" value="{7}" class="water_sales deducting_fee_inp"></dd>
             <div class="clear"></div>
         </dl>
 		
 		
 		 <dl class="sbcs">
         	<dt>臭氧杀菌间隔8T(10-240分)</dt>
-            <dd class="cssz"><input type="number" placeholder="0" name="chouyangshajunjiange" value="180" class="water_sales deducting_fee_inp"></dd>
+            <dd class="cssz"><input type="number" placeholder="0" name="chouyangshajunjiange" value="{8}" class="water_sales deducting_fee_inp"></dd>
             <div class="clear"></div>
         </dl>
 		
 		
 		 <dl class="sbcs">
         	<dt>温控加热启动温度1C(1-30℃)</dt>
-            <dd class="cssz"><input type="number" placeholder="0" name="jiarewenduxiaxian" value="5" class="water_sales deducting_fee_inp"></dd>
+            <dd class="cssz"><input type="number" placeholder="0" name="jiarewenduxiaxian" value="{9}" class="water_sales deducting_fee_inp"></dd>
             <div class="clear"></div>
         </dl>
 		
 		 <dl class="sbcs">
         	<dt>温控加热停止温度2C(1-30℃)</dt>
-            <dd class="cssz"><input type="number" placeholder="0" name="jiarewendushangxian" value="10" class="water_sales deducting_fee_inp"></dd>
+            <dd class="cssz"><input type="number" placeholder="0" name="jiarewendushangxian" value="{10}" class="water_sales deducting_fee_inp"></dd>
             <div class="clear"></div>
         </dl>
          
@@ -149,7 +164,7 @@
         
         <dl class="sbcs">
         	<dt>电导率显示方式2D(1TDS 2电导率)</dt>
-				<input type="hidden" id="cs1" class="weui-switch" placeholder="0" name="toubiqileixing"  value="1"  >
+				<input type="hidden" id="cs1" class="weui-switch" placeholder="0" name="toubiqileixing"  value="{11}"  >
             <dd class="cssz">
 				                <div class="cell-right"><span class="switch-on" id="wifi" onclick="delete_tag1()"></span></div>
 				            </dd>
@@ -159,14 +174,14 @@
 		
 		 <dl class="sbcs">
         	<dt>TDS修正数据3D(0-255)</dt>
-            <dd class="cssz"><input type="number" placeholder="0" name="xunhuanchongxishijian" value="0" class="water_sales deducting_fee_inp"></dd>
+            <dd class="cssz"><input type="number" placeholder="0" name="xunhuanchongxishijian" value="{12}" class="water_sales deducting_fee_inp"></dd>
             <div class="clear"></div>
         </dl>
         
         <dl class="sbcs">
         	<dt>洗膜方式4D(1低压 2高压)</dt>
             <dd class="cssz">
-			<input type="hidden" id="cs2" class="weui-switch" placeholder="0" name="yuyinyinliangtiaojie"  value="1"  >
+			<input type="hidden" id="cs2" class="weui-switch" placeholder="0" name="yuyinyinliangtiaojie"  value="{13}"  >
 			
 			                <div class="cell-right"><span class="switch-on" id="wifi" onclick="delete_tag3()"></span></div>
 							</dd>
@@ -181,17 +196,56 @@
                 <div class="clear"></div>
             </div>
         </form> 
-		<div style="clear: both;"></div>
-            <div class="footer">山东跃水电子科技有限公司</div>
-    </div><!--warp-->
-<script>
-var SCOPE = {
-  'post_url' : ""
-}
+    `
+    
+    String.format = function(src){  
+            if (arguments.length == 0) return null;  
+            var args = Array.prototype.slice.call(arguments, 1);  
+            return src.replace(/\{(\d+)\}/g, function(m, i){  
+                return args[i];  
+            });  
+        };  
+
+    console.log($(".warp"))
+    
+
+        
+    $(document).ready(function(){
+        //首页设备列表展示
+        var id = window.location.href.split("/")[8]
+        var url = "/deviceQuery/" + id + "/"
+        $.ajax({
+                type:'GET',
+                url:url,
+                cache: false,
+                beforeSend: function (XMLHttpRequest) {
+                    XMLHttpRequest.setRequestHeader("Authorization","JWT "+$.cookie('token'));
+                },
+                success:function(data){
+                    console.log(data)
+                    tmpStr = String.format(tmpStr,
+                        data["device_id"],
+                        data["_1t"],
+                        data["_2t"],
+                        data["_3t"],
+                        data["_4t"],
+                        data["_5t"],
+                        data["_6t"],
+                        data["_7t"],
+                        data["_8t"],
+                        data["_1c"],
+                        data["_2c"],
+                        data["_2d"],
+                        data["_3d"],
+                        data["_4d"],
+                    )
+                    $(".warp").append(tmpStr)
+                        
+                }
+        })
+    })
+
 </script>
-<script src="/public/static/js/layer/mobile/layer.js" type="text/javascript" charset="utf-8"></script>
-<script src="/public/static/js/mdialog.js" type="text/javascript" charset="utf-8"></script>
-<script src="/public/static/js/mcommon.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript">
 
 function delete_tag1(){
